# Auto-Pod

./: .env.template  README.md  ROADMAP.md  SPECS.md  app.py  openai_script_generator.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: script.js
templates/: home.html  result.html
